Senior Android Engineer | Averity. Orro - Android Applications Engineer - Senior. Tide Business Banking - Jobs: Senior Android Engineer - Apply online. Job Application for Senior Android Engineer - Content and Partners team at Glovo. Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters. Job Application for Android Engineer at ACV Auctions. Job Application for Android Engineer at ACV Auctions. allego - Jobs: Senior Android Mobile Engineer - Apply online. Mojo Vision - Sr. Android Software Engineer.     Android Engineer  at Vokal . Quizlet - Android Software Engineer, Team Engagement. Quizlet - Android Software Engineer, Subscriptions. Job Application for Principal Android Engineer at MedMen.     Android Engineer  at Vokal . Joyn GmbH - Android Software Engineer (m/f/d). Job Application for Android Engineer (New Grad) at Robinhood. Job Application for Android Engineer (Intern/Co-op) at Robinhood. Trek Bicycle Karrieren–Android Mobile Software Engineer. Android SDK Engineer - ab180 Inc. - Career Page. Incode Technologies - Senior Android Engineer (Mexico City, Mexico). Tally - Senior Android Engineer. Job Application for Senior Android Engineer  at foodpanda Singapore. Trek Bicycle Careers - Android Mobile Software Engineer. Scribd - Android Engineer. Gloo - Senior Android Engineer. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Front - Android Engineer. Klarna - Senior/Lead Android Engineer. Job Application for Android Engineer  at Envoy. Job Application for Android Engineer at JUUL Labs. Deezer Lead Android Engineer - Core Team | SmartRecruiters. Babylon Health - Senior Android Engineer. Freelancer.com - Jobs: Android Software Engineer - Apply online. Job Application for Android Engineer  at Twitch. Job Application for Android Engineer  at Twitch. Job Application for Android Software Engineer, Extensions at Twitch. Houzz - Junior Android Software Engineer. Houzz - Andr

--- a/android-engineer.html
+++ b/android-engineer.html
@@ -60,7 +60,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4368807002'>Job Application for Senior Android Engineer - Content and Partners team at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4368807002'>Job Application for Senior Android Engineer - Content and Partners team at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -148,7 +148,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -181,7 +181,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/269c7c75-10ca-4d6c-a5c8-2edb9097607d'>Babylon Health - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/babylonhealth/269c7c75-10ca-4d6c-a5c8-2edb9097607d'>Babylon Health - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -265,7 +265,7 @@ Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <p>1 day ago ... ... Senior Technical Evangelist - Mobile Studio Cambridge; Senior Technical 
 Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691320977-android-engineer-app-fleet-team'>Deezer Android Engineer - App Fleet Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Deezer/743999691320977-android-engineer-app-fleet-team'>Deezer Android Engineer - App Fleet Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -350,7 +350,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
+<h5><a href='https://jobs.lever.co/apartmentlist/28a59733-76eb-4496-bfef-c1595c7d3285'>Apartment List - Android Engineer - Search and Discovery</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
