--- a/security.html
+++ b/security.html
@@ -164,7 +164,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/curology/jobs/1791412'>Job Application for Sr. DevOps Security Engineer  at Curology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791412'>Job Application for Sr. DevOps Security Engineer  at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -296,7 +296,7 @@ Review all of the job details and apply today!</p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
+<h5><a href='http://idsinternational.applytojob.com/apply/ZIwclq4mxz/AME-Security-Cooperation-Logistics-Analyst'>AM&amp;E Security Cooperation Logistics Analyst - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -330,11 +330,11 @@ today!</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/uhxh1ekzfbn3ne19sxtt5fxexy'>Application Security Engineer | JFR Staffing</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/uhxh1ekzfbn3ne19sxtt5fxexy'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -450,7 +450,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nfJvPKwx'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oNylafwA&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nfJvPKwx'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Los Angeles California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -458,7 +458,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
