IDT - Director of Development Operations - DevOps. Burwood Group Careers - DevOps Architect. Progressive technology solutions Sr. DevOps Engineer | SmartRecruiters. Senior DevOps Engineer - Anthem, Inc. Careers.       Infrastructure/DevOps/Site Reliability Engineer - Digital Assets Data, Inc.     . DevOps Engineer #0508 job at Stratus Solutions in Fulton, MD, powered by JobScore. CARFAX Canada Careers - DevOps Engineer. Job @ Nezasa (Lisbon): DevOps Engineer | JOIN. Shore Consulting Senior DevOps Engineer | SmartRecruiters. eFront - CI/CD (DevOps) Engineer - Insight. TFS Administrator / DevOps Administrator (m/w/d). Job Application for Senior/Principal DevOps Engineer at PatientsLikeMe. Magenic Careers - Senior DevOps Engineer. Nutanix Careers - MTS - DevOps Developer. Anitian  DevOps Engineer (Cloud Automation Engineering) | SmartRecruiters. Job @ Synedat Consulting (Frankfurt): DevOps Engin... | JOIN. Job @ Synedat Consulting (Berlin): DevOps Engineer... | JOIN. Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN. Cirrus Logic Careers - DevOps Engineer. Benefitfocus Careers - Sr. DevOps Engineer. spruceinfotech DevOps Software Engineer | SmartRecruiters. Contract DevOps Engineer | Shulman Fleming &amp; Partners. Alfresco - DevOps Cloud Architect. Job Application for DevOps Engineer at Arundo Analytics.     DevOps Engineer (Software Development) at Artificial Solutions . Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters. Drivy - Tooling / DevOps Intern. Job Application for DevOps Engineer at Stack Sports  . Dell International Services DevOps Engineer | SmartRecruiters. DevOps Engineer | Averity. DevOps Engineer at FinTech disruptor | Averity. Infostretch Corporation Careers - DevOps Engineer. Vocera Communications, Inc. Careers - Sr. DevOps Engineer. Job Application for DevOps Engineer at SumUp. New York Media - DevOps Engineer. Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg. Burwood Group Careers - DevO

--- a/devops.html
+++ b/devops.html
@@ -153,7 +153,7 @@ leading?...</p>
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/stacksports/jobs/1787995'>Job Application for DevOps Engineer at Stack Sports  </a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -254,7 +254,7 @@ term?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://durst.join.com/jobs/254803-devops-backend-entwickler-php-m-w-d'>Job @ Durststrecke (K?ln): DevOps / Backend Entwic... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://durst.join.com/jobs/254803-devops-backend-entwickler-php-m-w-d'>Job @ Durststrecke (K?ln): DevOps / Backend Entwic... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -283,7 +283,7 @@ us your CV. Any questions before taking the next step? You can contact Dorian.</
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1775993'>Job Application for Systems Engineer (SRE/DevOps) at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... About Nubank. Nubank is the leading financial technology company in Latin 
 America. Its first product, launched in 2014, is a no-fee credit card that is fully?...</p>
@@ -356,11 +356,11 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of Senior DevOps Engineer at Azimo.</p>
 <hr/>
-<h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redshelf.applytojob.com/apply/msFkIQAoYc/DevOps-Engineer'>DevOps Engineer - RedShelf - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/INNOVIEW/743999692161526-devops-engineer'>Innoview DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -396,7 +396,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
+<h5><a href='https://chilipublish.recruitee.com/o/qa-engineer-devops-specialist'>
       QA Engineer / DevOps Specialist - CHILI publish
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
