Job Application for Business Intelligence Analyst at letgo. Santander Consumer USA Careers - Associate, Business Intelligence & Reporting. Job Application for Analyst- Business Intelligence at Endurance International Group - India.       (Lead) Business Intelligence Manager (f/m/div) for a new finleap venture - FinLeap GmbH     . Enterprise Business Intelligence Manager. Job Application for Business Intelligence Analyst - LiveScore at LiveScore. Job Application for Business Intelligence Analyst at SumUp. HomeX - Business Intelligence Analyst. Proprioo Business intelligence analyst (H/F) | SmartRecruiters. Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC .... Business Intelligence Analyst - Apply online - Zengistics - Jobs. Verve - Jobs: Business Intelligence Analyst - Apply online. Business Intelligence Analyst - Fooda - Career Page. Business Intelligence Analyst - Shypple. IKEA Southeast Asia Business Intelligence Architect, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters. SEGA Europe Limited Careers - Business Intelligence Analyst. Job Application for Business Intelligence Lead at CB Insights. Job Application for Business Intelligence Analyst  at Wargaming CIS. Credit Karma - Staff Business Intelligence Analyst. Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore. Job Application for Director, Business Intelligence at Omaze. Datatonic - Jobs: Business Intelligence Consultant - Apply online. Jobs: Head of Business Intelligence ... - Verse Technologies Inc. LeoVegas.com Business Intelligence Engineer | SmartRecruiters. MediaCom Careers - Manager, Business Intelligence. Gameloft Junior Business Intelligence Analyst | SmartRecruiters. Business Intelligence Architect 2 (16062) | Sundial Software Career Opportunities. Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting. Senior Business Intelligence Engineer in Armonk, New York .... Business Intelligence An

--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -77,7 +77,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -98,11 +98,11 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://shypple.recruitee.com/o/business-intelligence-analyst'>Business Intelligence Analyst - Shypple</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... The Business Intelligence Analyst will be responsible for researching, collecting, 
 analyzing and reporting operational and business data from multiple sources.</p>
@@ -181,7 +181,7 @@ Media Hungary Kft.</p>
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/FYplMtOkOi/Business-Intelligence-Analyst'>Business Intelligence Analyst - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/FYplMtOkOi/Business-Intelligence-Analyst'>Business Intelligence Analyst - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -191,7 +191,7 @@ Media Hungary Kft.</p>
 believe a workplace food program is something employees should love and look
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
+<h5><a href='https://boards.greenhouse.io/temper/jobs/4313851002'>Job Application for Business Intelligence Analyst at Temper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... As our Business Intelligence Analyst you will be our driver and executer in 
 developing and implementing metrics and reporting to improve our business and
@@ -293,7 +293,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
@@ -330,7 +330,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
+<h5><a href='https://bitpesa.workable.com/j/9927083438'>BitPesa - Jobs: Business Intelligence Analyst - Sales - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -342,7 +342,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/techo-bloc/743999691956000-business-intelligence-analyst-data-architect-etl'>Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -362,7 +362,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/narrative-science/job/od8xafwM'>Narrative Science Careers - Business Intelligence Support Specialist</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -436,7 +436,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/mediacom-emea/job/ou1yafwX'>MediaCom Careers - Business Intelligence Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mediacom-emea/job/ou1yafwX'>MediaCom Careers - Business Intelligence Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
