Aircall - Senior Software Engineer - Front-end - Communications Platform. Senior Software Developer in Test- Insurance Consulting and Technology - Willis Towers Watson Careers. Wunderman Thompson Commerce - Jobs: Software Developer - Apply online. CaseWare - Jobs: Software Developer - Desktop - Apply online. SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure - Apply online. SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online. SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online. Job Application for Senior Software Engineer, Backend at Roostify. iStreamPlanet Careers - Senior Software Engineer - Events. iStreamPlanet Careers - Senior Software Engineer - Web Development. IDT - Lead Software Engineer. Job @ ADES (Vienna): Software Engineer (m/w) –Voll... | JOIN. Job @ ADES (Vienna): Software Engineer IoT (m/w) –... | JOIN. 3Pillar Global - Senior Software Engineer- Salesforce Development. Postman - Jobs: Software Engineer, Intern - Apply online. Job Application for Software Engineer in Test at Kustomer. Job @ close2real (Berlin): Software Engineer (Java... | JOIN. Jobvite, Inc. Careers - Senior Software Engineer. Premier Research Careers - Software Developer. Apttus Careers - Senior Software Engineer, QA. WP Engine Careers - Senior Staff Software Engineer. Job Application for Software Engineer at WellSky . Job Application for Software Engineer - Biotherapies  at WellSky . Job Application for Sr. Software Engineer at WellSky . Front End Software Engineer II (Lehi, UT) - MedBridge - Career Page. Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page. Front End Software Engineer II (Seattle, WA) - MedBridge - Career Page. Couchbase - Software Engineer in Test - Mobile. Visa Lead Software Engineer Big Data - Data Product Development | SmartRecruiters. Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online. Hostway | HOSTING - Jobs: Senior Software Engine

--- a/software.html
+++ b/software.html
@@ -39,11 +39,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/aircall/fecc6c85-97cb-40de-b184-be5922000ed7'>Aircall - Senior Software Engineer - Front-end - Communications Platform</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/senior-software-developer-in-test-insurance-consulting-and-technology-9790'>Senior Software Developer in Test- Insurance Consulting and Technology - Willis Towers Watson Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://wundermanthompsoncommerce.workable.com/j/F3F5FC678A'>Wunderman Thompson Commerce - Jobs: Software Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://caseware.workable.com/j/6AB658E6CA'>CaseWare - Jobs: Software Developer - Desktop - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/6AB658E6CA'>CaseWare - Jobs: Software Developer - Desktop - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -55,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/FF5155CCC4'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/FF5155CCC4'>SmartNews, Inc. - Jobs: Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -63,7 +71,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -71,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/idt/d46403cc-d3aa-41b8-9ed8-999a7200e354'>IDT - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -147,7 +155,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
+<h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -300,7 +308,7 @@
 <p>Jul 18, 2019 ... Senior Software Engineer - Compilers. Job ID #: 16393; Job Category: Software 
 Engineering; Employment Type: Experienced Professionals; Division:?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42860&localeCode=en-us'>Staff Software Engineer ? HPC debug and analysis tools ... - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=42860&localeCode=en-us'>Staff Software Engineer ? HPC debug and analysis tools ... - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... We are looking for an experienced staff software engineer who is passionate 
 about producing quality software and helping develop a young team of engineers
@@ -315,7 +323,7 @@ SIMS8 development environment is making significant steps forwards in its?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/communitybrands/job/onpBafwh'>Community Brands Careers - Full Stack Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -331,7 +339,7 @@ SIMS8 development environment is making significant steps forwards in its?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -343,7 +351,7 @@ SIMS8 development environment is making significant steps forwards in its?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/sr-software-engineer-linux-unix-windows-c-java-21262-ak4q2IRSOr6AcMaKkRyNN8'>Sr Software Engineer- Linux, Unix, Windows,C++, Java-21262 #0234 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/sr-software-engineer-linux-unix-windows-c-java-21262-ak4q2IRSOr6AcMaKkRyNN8'>Sr Software Engineer- Linux, Unix, Windows,C++, Java-21262 #0234 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -433,7 +441,7 @@ solution in a fast-paced, agile environment. We're looking for a developer with 
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://bridgemaker.join.com/jobs/259100-software-developer-m-w-d-uptodate'>Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bridgemaker.join.com/jobs/259100-software-developer-m-w-d-uptodate'>Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -447,16 +455,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Architect: you're passionate about architecture and designing for scale. You were 
 doing HA back in high school, and micro-service architectures in college.</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/restaurant365/4d89f80f-a52c-4156-8f0a-40a16ac38a5e'>Restaurant365 - Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 16, 2019 ... Creates clean, efficient code with minimal defects to meets customer 
-requirements; Participates in design discussions with the software architect and 
-the team to?...</p>
-<hr/>
-<h5><a href='https://lygos.workable.com/j/EDAA3D067A'>Lygos, Inc. - Jobs: Software Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
 <hr/>
 
 
